fixed layout bugs

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,3 +5,8 @@
 body {
   min-height: 100svh;
 }
+
+a {
+  color: currentColor;
+  text-decoration: none;
+}
